# ImageProcessingLabs

./: CMakeLists.txt  conanfile.txt
ImageProcessing/: main.cpp  utility.hpp
ImageProcessing/ImageCorrection/: image_correction.cpp  image_correction.hpp
ImageProcessing/ImageNoise/: image_noise.cpp  image_noise.hpp
ImageProcessing/ImageProcessing/: image_processing.cpp  image_processing.hpp
ImageProcessing/ImageResize/: bilinear_interpolation.cpp  bilinear_interpolation.hpp  nearest_neighbourd.cpp  nearest_neighbourd.hpp
